 eliminates many interface quirks.
-Windows use scroll bar when the data does not fit.
-The widget that displays the cards is now a full webbrowser, with e.g. 
 support for Javascript, animated gifs, ...	
-Move to SQL as the storage backend, resulting in improved speed and memory
 usage, as well as better scalability for large decks. Majority of work done
 by Ed Bartosh.
-Intelligent sorting of categories containing numbers, so that you no longer
 have to call a category 'Lesson 01' instead of 'Lesson '1 to get the correct
 ordering (Mike Appleby).
-Uses Phonon as sound backend instead of PyGame (Louis Cyphre).


-Danish translation by Randi H.
-Esperanto translation by jchthys.	
	

MNEMOSYNE 1.2 : 2008-11-25

-Improved support for unicode in filenames and directories.
-Reverted compression of backups from gz to bz2 again, to circumvent a   
 bug under Windows with unicode directory names.
-Wrote a plugin to always shuffle the revision queue, for users who want
 to override the prioritised scheduling introduced in Mnemosyne 1.1.
 This plugin can also be downloaded from 
 http://www.mnemosyne-proj.org/node/142
-Only open the sound system when needed in order to save CPU time 
 (patch by marmuta).
-More robust upgrading from old Mnemosyne versions.
-Fix bug where default export location was incorrectly specified.
-Reword statistics dialog to make clear that we only show data for 
 the next week.
-Norwegian translation by Petter Goksoyr Asen. 
	

MNEMOSYNE 1.1.1 : 2008-08-23

Databases opened by this version of Mnemosyne will no longer work under
older versions.

-Fixed 'learn new cards in random order' problem for imported cards (reported
 by Adam McCaughan).
-Fixed detection of relative paths under Windows (reported by E. Grannan).
-Renamed 'number of grade 0 cards to learn at once' to 'number of grade 0
 cards to hold in your hand' (suggested by Kenneth Murphy).
-Updated Czech translation by Jiri Popelka and Petr Tomica.